[package]
name = "FireflyHelper"
version = "1.0.0"
edition = "2021"

[lib]
name = "mhypbase"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.81"
ilhook = "2.1.1"
lazy_static = "1.5.0"
libloading = "0.8.6"
windows = { version = "0.58.0", features = [
    "Win32_Security",
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_Debug"
] }
winapi = { version = "0.3.9", features = ["winuser", "processthreadsapi", "ntdef", "minwindef", "minwinbase", "winnt", "libloaderapi"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
patternscan = "1.2.0"

cc = "1.2.2"
embed-resource = "3.0.1"
